# Waytotec.ControlSystem

./: README.md  Waytotec.ControlSystem.sln  create_solution.sh
Documents/: Wtt_v1.pptx  카메라_관련_프로토콜_v1.docx
ExternalSource/camifd-펌웨어프로토콜/: Makefile
ExternalSource/camifd-펌웨어프로토콜/src/: CMakeLists.txt  cam_client.c  cam_client.h  cam_proto.c  cam_proto.h  cam_server.c  cam_server.h  camifd_config.c  camifd_config.h  id_client.c  id_client.h  id_server.c  id_server.h  logprt.c  logprt.h  main.c  queue.h  server.c  server.h  strutil.c  strutil.h  typedef.h  uci_conf.c
ExternalSource/ipinstall-검색프로토콜/: Makefile
ExternalSource/ipinstall-검색프로토콜/src/: CMakeLists.txt  ipinstall.c  ipinstall.h  network_util.c  network_util.h  routing.c  routing.h  uci_conf.c  uci_conf.h
Waytotec.ControlSystem.App/: App.xaml  App.xaml.cs  Waytotec.ControlSystem.App.csproj
Waytotec.ControlSystem.App/Converters/: BoolToStringConverter.cs  BoolToVisibilityConverter.cs  CountToVisibilityConverter.cs  CustomConverters.cs  EnumToBooleanConverter.cs  GroupBoxContentHeightConverter.cs  StatusToColorConverter.cs  ThemeToOpacityConverter.cs
Waytotec.ControlSystem.App/Effects/: Snowflake.cs  SnowflakeEffect.cs
Waytotec.ControlSystem.App/Resources/: ModernGroupBoxStyle.xaml  Styles.xaml
Waytotec.ControlSystem.App/Services/: AppMessagingService.cs  (+2 more)
Waytotec.ControlSystem.Core/: Class1.cs
Waytotec.ControlSystem.Infrastructure/: Class1.cs  Waytotec.ControlSystem.Infrastructure.csproj
Waytotec.ControlSystem.IoC/: ContainerConfig.cs
Waytotec.ControlSystem.Tests/: Class1.cs
(+69 files in other folders)
